ESB-356: entity refactor, add edit functionality